--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@ body{
 }
 
 .weatherCard {
-    display:none;
+    display:flex;
     background: rgba (255,255,255,0.9);
     color: #333;
     padding:20px;
